/**
* Generated by go-doudou v2.0.0.
* Don't edit!
*
* Version No.: v20221024
*/
syntax = "proto3";

package helloworld;
option go_package = "github.com/unionj-cloud/go-doudou-tutorials/grpcdemo/server/transport/grpc";

import "google/protobuf/any.proto";

enum KeyboardLayout {
  UNKNOWN = 0;
  QWERTZ = 1;
  AZERTY = 2;
  QWERTY = 3;
}

message ByeRpcRequest {
  // 入参
  string greeting = 1 [json_name="greeting"];
}

message ByeRpcResponse {
  // 出参
  string data = 1 [json_name="data"];
}

message GreetingRpcRequest {
  // 入参
  string greeting = 1 [json_name="greeting"];
}

message GreetingRpcResponse {
  // 出参
  string data = 1 [json_name="data"];
}

message Keyboard {
  KeyboardLayout layout = 1 [json_name="layout"];
  bool backlit = 2 [json_name="backlit"];
}

message Order {
  string col = 1 [json_name="col"];
  string sort = 2 [json_name="sort"];
}

message Page {
  // 排序规则
  repeated Order orders = 1 [json_name="orders"];
  // 页码
  int32 page_no = 2 [json_name="pageNo"];
  // 每页行数
  int32 size = 3 [json_name="size"];
}

message PageFilter {
  // 真实姓名，前缀匹配
  string name = 1 [json_name="name"];
  // 所属部门ID
  int32 dept = 2 [json_name="dept"];
}

// 分页筛选条件
message PageQuery {
  PageFilter filter = 1 [json_name="filter"];
  Page page = 2 [json_name="page"];
}

message PageRet {
  google.protobuf.Any items = 1 [json_name="items"];
  int32 page_no = 2 [json_name="pageNo"];
  int32 page_size = 3 [json_name="pageSize"];
  int32 total = 4 [json_name="total"];
  bool has_next = 5 [json_name="hasNext"];
}

message UserVo {
  int32 id = 1 [json_name="id"];
  string name = 2 [json_name="name"];
  string phone = 3 [json_name="phone"];
  string dept = 4 [json_name="dept"];
}

service HelloworldService {
  // Greeting 问候接口
  rpc GreetingRpc(GreetingRpcRequest) returns (GreetingRpcResponse);
  // Bye 再见接口
  rpc ByeRpc(ByeRpcRequest) returns (ByeRpcResponse);
  rpc BiStreamRpc(stream Order) returns (stream Page);
  rpc ClientStreamRpc(stream Order) returns (Page);
  rpc ServerStreamRpc(Order) returns (stream Page);
}
